# GeoAPI

./: .env-docker-example  README.md  docker-compose.yaml  pyproject.toml
config/: app_config.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 10d7a9e23349_create_geo_table.py
src/: __init__.py  main.py
src/api/actions/: geo_crud.py
src/api/handlers/: geo_handler.py
src/api/schemas/: geo_schemas.py
src/db/: session.py
src/db/dals/: geo_dals.py
src/db/models/: __init__.py  geo.py
