[tool.poetry]
name = "geoapi"
version = "0.1.0"
description = "Repo for testing task"
authors = ["Yaroslav <yarikbritov@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
requests = "^2.31.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
